[gd_scene load_steps=8 format=2]

[ext_resource path="res://img/Asteroid.png" type="Texture" id=1]
[ext_resource path="res://img/metdestro2.png" type="Texture" id=2]
[ext_resource path="res://img/metdes1.png" type="Texture" id=3]
[ext_resource path="res://som/destro_1.wav" type="AudioStream" id=4]
[ext_resource path="res://cenas/AsteC.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 65.8087

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "destroi",
"speed": 5.0
} ]

[node name="AsteC" type="StaticBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 16
collision_mask = 16
script = ExtResource( 6 )

[node name="Area2D2" type="Area2D" parent="."]
z_as_relative = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
z_as_relative = false
shape = SubResource( 1 )

[node name="Label2" type="Label" parent="."]
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
scale = Vector2( 0.062, 0.062 )
frames = SubResource( 3 )
playing = true

[node name="VisibilityNotifier2D2" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D2" to="." method="_on_VisibilityNotifier2D2_screen_exited"]
